refactor(ui): :lipstick: update entry and tab related components

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,3 +1,21 @@
 body {
     margin-top: 0;
 }
+
+.mobile {
+    display: none;
+}
+
+.desktop {
+    display: block;
+}
+
+@media only screen and (max-width: 600px){
+    .mobile {
+        display: block;
+    }
+
+    .desktop {
+        display: none;
+    }
+}
